SonarQube file, and it's working well

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,13 +5,13 @@ sonar.projectVersion=0.0.1-SNAPSHOT
 #sonar.host.url=someurl
 
 #Path for sonar sources, . or src/main/java
-sonar.sources=.
+sonar.sources=src/main/java
 
 #Path for libraries
 #sonar.libraries=target/lib/*.jar
 
 #Path for binaries
-sonar.binaries=target
+sonar.java.binaries=target
 
 #----- Default database
 #sonar.jdbc.url=someurl
@@ -27,11 +27,11 @@ sonar.java.target=1.8
 sonar.language=java
 
 #----- Exclusions
-#sonar.exclusions=**/*test*/**/*
+sonar.exclusions=**/*test*/**
 
 sonar.sourceEncoding=UTF-8
 
-sonar.tests=src/test
+sonar.tests=src/test/
 sonar.dynamicAnalysis=reuseReports
 sonar.junit.reportsPath=target/surfire-reports
 
