--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.sources=src/main/java
 
 #Path for libraries
-#sonar.libraries=target/lib/*.jar
+sonar.java.libraries=./target/classes
 
 #Path for binaries
 sonar.java.binaries=target
@@ -37,4 +37,4 @@ sonar.junit.reportsPath=target/surfire-reports
 
 #----- JaCoCo reports
 sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPath=target/jacoco.exec   
+sonar.coverage.jacoco.xmlReportPaths=target/   
